@@ -5,7 +5,7 @@ namespace DW.WPFToolkit.Controls
 {
     public class DefaultMessageCopyFormatter : IMessageCopyFormatter
     {
-        public void Copy(string title, string message, WPFMessageBoxButtons buttons, WPFMessageBoxImage icon)
+        public void Copy(string title, string message, WPFMessageBoxButtons buttons, WPFMessageBoxImage icon, MessageBoxStrings strings)
         {
             var builder = new StringBuilder();
             builder.AppendLine("---------------------------");
@@ -13,35 +13,40 @@ namespace DW.WPFToolkit.Controls
             builder.AppendLine("---------------------------");
             builder.AppendLine(message);
             builder.AppendLine("---------------------------");
-            AppendButtons(builder, buttons);
+            AppendButtons(builder, buttons, strings);
             builder.AppendLine("---------------------------");
 
             Clipboard.SetText(builder.ToString());
         }
 
-        private void AppendButtons(StringBuilder builder, WPFMessageBoxButtons buttons)
+        private void AppendButtons(StringBuilder builder, WPFMessageBoxButtons buttons, MessageBoxStrings strings)
         {
             switch (buttons)
             {
                 case WPFMessageBoxButtons.OK:
-                    builder.AppendLine("OK   ");
+                    builder.AppendLine(string.Format("{0}   ", GetString(strings.OK)));
                     break;
                 case WPFMessageBoxButtons.OKCancel:
-                    builder.AppendLine("OK   Abbrechen   ");
+                    builder.AppendLine(string.Format("{0}   {1}   ", GetString(strings.OK), GetString(strings.Cancel)));
                     break;
                 case WPFMessageBoxButtons.RetryCancel:
-                    builder.AppendLine("Wiederholen   Abbrechen   ");
+                    builder.AppendLine(string.Format("{0}   {1}   ", GetString(strings.Retry), GetString(strings.Cancel)));
                     break;
                 case WPFMessageBoxButtons.YesNo:
-                    builder.AppendLine("Ja   Nein   ");
+                    builder.AppendLine(string.Format("{0}   {1}   ", GetString(strings.Yes), GetString(strings.No)));
                     break;
                 case WPFMessageBoxButtons.YesNoCancel:
-                    builder.AppendLine("Ja   Nein   Abbrechen   ");
+                    builder.AppendLine(string.Format("{0}   {1}   {2}   ", GetString(strings.Yes), GetString(strings.No), GetString(strings.Cancel)));
                     break;
                 case WPFMessageBoxButtons.AbortRetryIgnore:
-                    builder.AppendLine("Abbrechen   Wiederholen   Ignorieren   ");
+                    builder.AppendLine(string.Format("{0}   {1}   {2}   ", GetString(strings.Abort), GetString(strings.Retry), GetString(strings.Ignore)));
                     break;
             }
+        }
+
+        private string GetString(string original)
+        {
+            return original.Replace("_", "");
         }
     }
 }
