@@ -33,15 +33,15 @@
                 <ControlTemplate TargetType="{x:Type Controls:WPFMessageBoxButtonsPanel}">
                     <DockPanel Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                            <Controls:WPFMessageBoxButtonControl Content="OK" x:Name="PART_SingleOKButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_SingleOKButton" Visibility="Collapsed" />
 
-                            <Controls:WPFMessageBoxButtonControl Content="OK" x:Name="PART_OKButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Ja" x:Name="PART_YesButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Nein" x:Name="PART_NoButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Abbrechen" x:Name="PART_AbortButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Wiederholen" x:Name="PART_RetryButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Abbrechen" x:Name="PART_CancelButton" Visibility="Collapsed" />
-                            <Controls:WPFMessageBoxButtonControl Content="Ignorieren" x:Name="PART_IgnoreButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_OKButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Yes, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_YesButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.No, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_NoButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Abort, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_AbortButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Retry, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_RetryButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Cancel, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_CancelButton" Visibility="Collapsed" />
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Ignore, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_IgnoreButton" Visibility="Collapsed" />
                         </StackPanel>
 
                         <Grid />
