@@ -8,10 +8,12 @@ namespace DW.WPFToolkit.Controls
         {
             MessageCopyFormatter = new DefaultMessageCopyFormatter();
             ShowSystemMenu = false;
+            Strings = new MessageBoxStrings();
         }
 
         public IMessageCopyFormatter MessageCopyFormatter { get; set; }
         public bool ShowSystemMenu { get; set; }
         public ImageSource Icon { get; set; }
+        public MessageBoxStrings Strings { get; set; }
     }
 }
