@@ -133,6 +133,7 @@
     <Compile Include="Controls\UniformWrapPanel\UniformWrapPanel.cs" />
     <Compile Include="Controls\WPFMessageBox\DefaultMessageCopyFormatter.cs" />
     <Compile Include="Controls\WPFMessageBox\IMessageCopyFormatter.cs" />
+    <Compile Include="Controls\WPFMessageBox\MessageBoxStrings.cs" />
     <Compile Include="Controls\WPFMessageBox\WPFMessageBox.xaml.cs">
       <DependentUpon>WPFMessageBox.xaml</DependentUpon>
     </Compile>
@@ -170,6 +171,7 @@
       <DependentUpon>License.xaml</DependentUpon>
     </Compile>
     <Compile Include="Internal\PathCalculator.cs" />
+    <Compile Include="Internal\SystemTexts.cs" />
     <Compile Include="Internal\WindowTitleBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
